# QtDrone

./: CMakeLists.txt  resources.qrc
inc/: SpinBoxController.hpp  accsimulator.hpp  chartwindow.hpp  mainwindow.hpp  simulationcontroller.hpp  translate.hpp
moj_projekt/: CMakeLists.txt  CMakeLists.txt.user.77df6e5  CMakeLists.txt.user.e0f67ed  Doxyfile  README.md  resources.qrc
moj_projekt/html/: D3widget_8cpp.html  D3widget_8cpp__incl.map  D3widget_8cpp__incl.md5  D3widget_8cpp_source.html  D3widget_8hpp.html  D3widget_8hpp.js  D3widget_8hpp__dep__incl.map  D3widget_8hpp__dep__incl.md5  D3widget_8hpp__incl.map  D3widget_8hpp__incl.md5  D3widget_8hpp_source.html  README_8md.html  SerialPortHandler_8cpp.html  SerialPortHandler_8cpp__incl.map  SerialPortHandler_8cpp__incl.md5  SerialPortHandler_8cpp_source.html  SerialPortHandler_8hpp.html  SerialPortHandler_8hpp.js  SerialPortHandler_8hpp__dep__incl.map  SerialPortHandler_8hpp__dep__incl.md5  SerialPortHandler_8hpp__incl.map  SerialPortHandler_8hpp__incl.md5  SerialPortHandler_8hpp_source.html  SpinBoxController_8cpp.html  SpinBoxController_8cpp__incl.map  SpinBoxController_8cpp__incl.md5  SpinBoxController_8cpp_source.html  SpinBoxController_8hpp.html  SpinBoxController_8hpp.js  SpinBoxController_8hpp__dep__incl.map  SpinBoxController_8hpp__dep__incl.md5  SpinBoxController_8hpp__incl.map  SpinBoxController_8hpp__incl.md5  SpinBoxController_8hpp_source.html  accsimulator_8cpp.html  accsimulator_8cpp__incl.map  accsimulator_8cpp__incl.md5  accsimulator_8cpp_source.html  accsimulator_8hpp.html  accsimulator_8hpp.js  (+244 more)
moj_projekt/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_4.js  files_0.js  files_1.js  files_2.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  (+4 more)
moj_projekt/inc/: D3widget.hpp  SerialPortHandler.hpp  SpinBoxController.hpp  accsimulator.hpp  chartwindow.hpp  mainwindow.hpp  simulationcontroller.hpp  translator.hpp
moj_projekt/linguist/: moj_projekt_en_150.ts  moj_projekt_pl_150.ts
moj_projekt/resources/languages/: moj_projekt_en_150.qm  moj_projekt_pl_150.qm
moj_projekt/src/: D3widget.cpp  SerialPortHandler.cpp  SpinBoxController.cpp  chartwindow.cpp  main.cpp  mainwindow.cpp  simulationcontroller.cpp  translator.cpp
moj_projekt/ui/: chartwindow.ui  mainwindow.ui
src/: SpinBoxController.cpp  accsimulator.cpp  chartwindow.cpp  mainwindow.cpp  translate.cpp
ui/: mainwindow.ui
